--- a/cmd/scanner/application.json
+++ b/cmd/scanner/application.json
@@ -1,5 +1,5 @@
 {
-    "DB_HOST": "localhost",
+    "DB_HOST": "192.168.0.201",
     "DB_PORT": "5432",
     "DB_DATABASE": "vinylretailers",
     "DB_DRIVER": "postgres",
